[gd_scene load_steps=27 format=3 uid="uid://xkbhj635uytl"]

[ext_resource type="Script" path="res://scenes/interfaes/main_menu_script.gd" id="1_ptce0"]
[ext_resource type="Texture2D" uid="uid://d372wsjrhshfr" path="res://assets/sprites/cenarios/city_scenary/cenario_completo_animado1.png" id="2_yytkx"]
[ext_resource type="Theme" uid="uid://bj3h6awcolrmx" path="res://scenes/interfaes/separation.tres" id="3_3i44a"]
[ext_resource type="FontFile" uid="uid://dtvxu2t8suq47" path="res://assets/fonts/Crang.ttf" id="3_d17x7"]
[ext_resource type="Texture2D" uid="uid://cg6srhysute77" path="res://assets/sprites/cenarios/city_scenary/cenario_completo_animado2.png" id="3_nxluv"]
[ext_resource type="Texture2D" uid="uid://b0io1rhglurd2" path="res://assets/sprites/cenarios/city_scenary/cenario_completo_animado3.png" id="4_1syh2"]
[ext_resource type="Texture2D" uid="uid://eabf43k515cw" path="res://assets/sprites/layouts/of-simble.png" id="4_m2lyg"]
[ext_resource type="Texture2D" uid="uid://cmwbbd4qhc8pt" path="res://assets/sprites/cenarios/city_scenary/cenario_completo_animado4.png" id="5_4medy"]
[ext_resource type="PackedScene" uid="uid://bwhgckxmv1c8p" path="res://transition_Animation.tscn" id="5_m61bl"]
[ext_resource type="Texture2D" uid="uid://baxnbot6g4vch" path="res://assets/sprites/cenarios/city_scenary/cenario_completo_animado5.png" id="6_q4eyx"]
[ext_resource type="PackedScene" uid="uid://b04338bibrmnl" path="res://scenes/interfaes/alert.tscn" id="7_l6unk"]
[ext_resource type="PackedScene" uid="uid://bqepel07onhu7" path="res://scenes/interfaes/layout_fases.tscn" id="12_av2vh"]
[ext_resource type="AudioStream" uid="uid://byk1klf80e3hk" path="res://assets/audio/songs/bg_souds/LE SSERAFIM (르세라핌) - Impurities.mp3" id="13_c2y7l"]
[ext_resource type="PackedScene" uid="uid://c4cy0kbmv51a6" path="res://scenes/interfaes/music_alert.tscn" id="14_c2y7l"]
[ext_resource type="Texture2D" uid="uid://ca1x2yjpwxla4" path="res://assets/sprites/buttons/controls/butao1.png" id="15_5a3fd"]
[ext_resource type="Texture2D" uid="uid://cypj84nlspbm8" path="res://assets/sprites/buttons/controls/butao2.png" id="16_yl7ne"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m2yu2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yytkx")
}, {
"duration": 1.0,
"texture": ExtResource("3_nxluv")
}, {
"duration": 1.0,
"texture": ExtResource("4_1syh2")
}, {
"duration": 1.0,
"texture": ExtResource("5_4medy")
}, {
"duration": 1.0,
"texture": ExtResource("6_q4eyx")
}],
"loop": true,
"name": &"anim_scenarie",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_iswsc"]
font = ExtResource("3_d17x7")
font_size = 25
font_color = Color(0.858824, 0.890196, 0.4, 1)
outline_size = 3
outline_color = Color(0.2, 0.235294, 0.117647, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_av2vh"]
size = Vector2(98.455, 23.725)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yg02f"]
size = Vector2(60, 26)

[sub_resource type="LabelSettings" id="LabelSettings_2ufii"]
font = ExtResource("3_d17x7")
font_size = 30
font_color = Color(0.857367, 0.89, 0.4005, 1)
outline_size = 10
outline_color = Color(0.223167, 0.26, 0.13, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tcxrh"]
font = ExtResource("3_d17x7")
font_color = Color(0.82302, 0.87, 0.6351, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptw6t"]
size = Vector2(70, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hcsmx"]
size = Vector2(80, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lx0qg"]
size = Vector2(150, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6pes"]
size = Vector2(140, 26)

[node name="Main_menu" type="Node2D"]
script = ExtResource("1_ptce0")
next_scene = "res://scenes/phase/batle.tscn"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_m2yu2")
animation = &"anim_scenarie"
frame_progress = 0.373753

[node name="layout_1" type="Node2D" parent="."]

[node name="Layout" type="Area2D" parent="layout_1"]
position = Vector2(-282, -33)

[node name="VBoxContainer" type="VBoxContainer" parent="layout_1/Layout"]
offset_left = 19.0
offset_top = 13.0
offset_right = 111.0
offset_bottom = 118.0
theme = ExtResource("3_3i44a")

[node name="Jogar" type="Label" parent="layout_1/Layout/VBoxContainer"]
layout_mode = 2
text = "Jogar"
label_settings = SubResource("LabelSettings_iswsc")

[node name="btn_jogar" type="TouchScreenButton" parent="layout_1/Layout/VBoxContainer/Jogar"]
position = Vector2(46, 13)
shape = SubResource("RectangleShape2D_av2vh")

[node name="Quit" type="Label" parent="layout_1/Layout/VBoxContainer"]
layout_mode = 2
text = "SAIR"
label_settings = SubResource("LabelSettings_iswsc")

[node name="btn_quit" type="TouchScreenButton" parent="layout_1/Layout/VBoxContainer/Quit"]
position = Vector2(32, 12)
shape = SubResource("RectangleShape2D_yg02f")

[node name="Label" type="Label" parent="layout_1"]
offset_left = -139.0
offset_top = -164.0
offset_right = 84.0
offset_bottom = -124.0
text = "Residues"
label_settings = SubResource("LabelSettings_2ufii")

[node name="Label3" type="Label" parent="layout_1"]
offset_left = -190.0
offset_top = -126.0
offset_right = 37.0
offset_bottom = -83.0
text = "Apocalypse"
label_settings = SubResource("LabelSettings_2ufii")

[node name="Of-simble2" type="Sprite2D" parent="layout_1"]
position = Vector2(96, -133)
scale = Vector2(1.33333, 1.33333)
texture = ExtResource("4_m2lyg")
region_enabled = true
region_rect = Rect2(28.0695, 0, 18.9305, 26)

[node name="Of-simble" type="Sprite2D" parent="layout_1"]
position = Vector2(58, -134)
scale = Vector2(1.92308, 1.92308)
texture = ExtResource("4_m2lyg")
region_enabled = true
region_rect = Rect2(0, 0, 26.6905, 26)

[node name="layout_fases" parent="." instance=ExtResource("12_av2vh")]
visible = false
position = Vector2(-320, -180)

[node name="Transition" parent="." instance=ExtResource("5_m61bl")]

[node name="Alert" parent="." instance=ExtResource("7_l6unk")]
process_mode = 3
text = "Tem certeza que deseja sair?"

[node name="sair_lbl" type="Label" parent="Alert"]
offset_left = 302.0
offset_top = 208.0
offset_right = 343.0
offset_bottom = 231.0
size_flags_horizontal = 4
text = "Sair"
label_settings = SubResource("LabelSettings_tcxrh")

[node name="Sair_Confirmar" type="TouchScreenButton" parent="Alert/sair_lbl"]
position = Vector2(21, 9)
shape = SubResource("RectangleShape2D_ptw6t")

[node name="voltar_lbl" type="Label" parent="Alert"]
offset_left = 291.0
offset_top = 182.0
offset_right = 361.0
offset_bottom = 205.0
size_flags_horizontal = 4
text = "Voltar"
label_settings = SubResource("LabelSettings_tcxrh")

[node name="voltar" type="TouchScreenButton" parent="Alert/voltar_lbl"]
position = Vector2(32, 7)
shape = SubResource("RectangleShape2D_hcsmx")

[node name="lixos" type="Node2D" parent="."]
process_mode = 4
visible = false

[node name="New Game" type="Label" parent="lixos"]
offset_left = -263.0
offset_top = -20.0
offset_right = -112.0
offset_bottom = 6.0
text = "novo jogo"
label_settings = SubResource("LabelSettings_iswsc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_NewGame" type="TouchScreenButton" parent="lixos/New Game"]
position = Vector2(73, 15)
shape = SubResource("RectangleShape2D_lx0qg")

[node name="Continue" type="Label" parent="lixos"]
offset_left = -263.0
offset_top = 16.0
offset_right = -112.0
offset_bottom = 42.0
text = "Continue"
label_settings = SubResource("LabelSettings_iswsc")
vertical_alignment = 1

[node name="btn_Continue" type="TouchScreenButton" parent="lixos/Continue"]
position = Vector2(66, 14)
shape = SubResource("RectangleShape2D_v6pes")

[node name="bg_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_c2y7l")
volume_db = -3.0
attenuation = 6.41552

[node name="music_alert" parent="." instance=ExtResource("14_c2y7l")]

[node name="troca" type="TouchScreenButton" parent="."]
modulate = Color(0.43, 0.43, 0.43, 1)
position = Vector2(-299, 146)
scale = Vector2(0.71875, 0.71875)
texture_normal = ExtResource("15_5a3fd")
texture_pressed = ExtResource("16_yl7ne")

[connection signal="pressed" from="layout_1/Layout/VBoxContainer/Jogar/btn_jogar" to="." method="_jogar"]
[connection signal="pressed" from="layout_1/Layout/VBoxContainer/Quit/btn_quit" to="Alert" method="desaparecer"]
[connection signal="pressed" from="Alert/sair_lbl/Sair_Confirmar" to="." method="_on_sair_confirmar_pressed"]
[connection signal="pressed" from="Alert/voltar_lbl/voltar" to="Alert" method="desaparecer"]
[connection signal="pressed" from="lixos/New Game/btn_NewGame" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="lixos/Continue/btn_Continue" to="." method="_on_btn_continue_pressed"]
[connection signal="finished" from="bg_sound" to="." method="_on_bg_sound_finished"]
[connection signal="pressed" from="troca" to="." method="play_random_music"]
